# libtrivc

./: CMakeLists.txt  Makefile  README.md  atomic.c  buf.c  string.c
contrib/cmake/: cmake_uninstall.cmake.in
contrib/package/: cpack-deb-fix.sh  cpack-rpm-fix.sh
include/: CMakeLists.txt
include/trivc/: CMakeLists.txt  atomic.h  buf.h  compiler.h  numeric.h  stdcommon.h  string.h  trivc.h
include/trivc/sys/: CMakeLists.txt  buf.h  compiler.h  numeric.h  string.h  trivc.h
test/: CMakeLists.txt  atomic_test.cpp  buf_test.cpp  compiler_test.cpp  numeric_test.cpp  string_test.cpp  trivc_test.cpp
